# xion-farm

blockchain/: XionFarm Tokenization Contract.rs
web/: .gitignore
web/app/dashboard/marketplace/[id]/: page.tsx
web/components/dashboard/: products-list.tsx
web/hooks/: use-blockchain.ts
web/services/: blockchain.ts
web/types/: keplr.d.ts
xion-farm-contract/: .gitignore  Cargo.toml  XionFarm Tokenization Contract.rs
xion-farm-contract/src/: lib.rs
