[package]
name = "xion-farm-contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CosmWasm
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.8.0"

# Serde para serialização e desserialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cosmwasm-schema = "0.16.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true